# coding-tools

./: .gitattributes  .gitignore  Cargo.toml  README.md
.ct/: .gitignore  okf.jsonc  rules.jsonc
.github/workflows/: ci.yml  release.yml
docs/explain/: ct-await.json  ct-await.md  ct-check.json  ct-check.md  ct-deps.json  ct-deps.md  ct-each.json  ct-each.md  ct-edit.json  ct-edit.md  ct-okf.json  ct-okf.md  ct-outline.json  ct-outline.md  ct-patch.json  ct-patch.md  ct-rules.json  ct-rules.md  ct-search.json  ct-search.md  ct-steer.json  ct-steer.md  ct-survey.json  ct-survey.md  ct-test.json  ct-test.md  ct-tree.json  ct-tree.md  ct-view.json  ct-view.md  ct.json  ct.md  ctsearch.json  ctsearch.md  cttest.json  cttest.md  deps.json  mods.json  okf.json
docs/specs/: .okf  blocks.md  commands.md  index.md  indexing.md  rules-examples.md  rules-prior-art.md  rules.md
src/: allowlist.rs  atomicfile.rs  block.rs  blockdoc.rs  completion.rs  deps.rs  edit.rs  editscript.rs  explain.rs  indexing.rs  indexwatch.rs  jsonout.rs  lib.rs  modgraph.rs  okf.rs  okfindex.rs  okfroots.rs  okfscript.rs  outline.rs  patch.rs  pattern.rs  payload.rs  pulse.rs  rules.rs  steer.rs  supervise.rs  survey.rs  template.rs  testrun.rs  tree.rs  update.rs  verdict.rs  view.rs  walk.rs
src/cli/: ct_await.rs  ct_check.rs  ct_each.rs  ct_edit.rs  ct_okf.rs  ct_outline.rs  ct_patch.rs  ct_rules.rs  ct_search.rs  ct_steer.rs  ct_survey.rs  ct_test.rs  ct_tree.rs  ct_view.rs  mod.rs
tests/: block_payloads.rs  completion.rs  deps_await.rs  dispatch_bounds.rs  examples.rs  explain_docs.rs  framed_verdict.rs  json_pretty.rs  mods.rs  okf_tool.rs  outline_tool.rs  rules_surface.rs  steer.rs  walk_ignore.rs
tests/common/: mod.rs
