[package]
name = "coding_tools"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A suite of declarative command-line tools for project comprehension, search, and framed testing."

[lib]
name = "coding_tools"
path = "src/lib.rs"

[[bin]]
name = "ctsearch"
path = "src/bin/ctsearch.rs"

[[bin]]
name = "cttest"
path = "src/bin/cttest.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.3"
walkdir = "2.5.0"

[dev-dependencies]
serde_json = "1.0.150"
